--- a/index.html
+++ b/index.html
@@ -2,12 +2,52 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <title>Saudação</title>
     <link rel="stylesheet" href="css/inicio.css">
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            font-size: 16px;
+            margin: 0;
+            padding: 0;
+            background-color: #f0f0f0;
+            text-align: center;
+        }
+
+        h1 {
+            font-size: 2em;
+            color: #333;
+            margin-top: 20px;
+        }
+
+        button {
+            padding: 1em;
+            background-color: #4caf50;
+            color: #fff;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+        }
+
+        @media (max-width: 600px) {
+            body {
+                font-size: 14px;
+            }
+
+            h1 {
+                font-size: 1.5em;
+            }
+
+            button {
+                padding: 0.8em;
+            }
+        }
+    </style>
 </head>
 <body>
-    <h1>Oi senhorita Karenn! <br> Isso é para você: </h1>
-    <a href="flower.html"><button >Clique aqui</button></a>
+    <h1>Oi senhorita Karenn!<br>Isso é para você:</h1>
+    <a href="flower.html"><button>Clique aqui</button></a>
 </body>
 </html>
+
