--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     </style>
 </head>
 <body>
-    <h1>Oi senhorita Karenn!<br>Isso é para você:</h1>
+    <h1>Oi senhorita Rafaela!<br>Isso é para você:</h1>
     <a href="flower.html"><button>Clique aqui</button></a>
 </body>
 </html>
